--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title: Home
   {% endfor %}
 </div>
 
+<!-- Add this back in if we switch to a blog:
 <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-item older" href="{{ site.baseurl }}page{{paginator.next_page}}">Older</a>
@@ -33,5 +34,5 @@ title: Home
     {% endif %}
   {% else %}
     <span class="pagination-item newer">Newer</span>
-  {% endif %}
+  {% endif %} -->
 </div>
